all: added missing measurement unit for 0 values

--- a/examples/emulation/extclient/omnetpp.ini
+++ b/examples/emulation/extclient/omnetpp.ini
@@ -6,7 +6,7 @@ cmdenv-express-mode = true
 tkenv-default-run = 0
 
 **.testing = false
-**.testTimeout = 0
+**.testTimeout = 0s
 
 **.networkConfiguratorModule = ""
 
@@ -19,8 +19,8 @@ tkenv-default-run = 0
 **.peer.sctpApp[0].waitToClose = 0s #Time waited to close the connection after the last packet has been sent.
 #**.peer.sctpApp[0].idleInterval = truncnormal(1,1) ## FIXME undefined parameter
 **.peer.sctpApp[0].queueSize = 0 #Size of sendQueue before App is notified to send new data
-#**.peer.sctpApp[0].replyDelay=0 ## FIXME undefined parameter
-**.peer.sctpApp[0].echoDelay=0
+#**.peer.sctpApp[0].replyDelay=0s ## FIXME undefined parameter
+**.peer.sctpApp[0].echoDelay=0s
 **.peer.sctpApp[0].echo=true
 **.peer.sctpApp[0].numPacketsToReceivePerClient = 0  # 0: number of packets to receive is not known
 
