--- a/examples/emulation/traceroute/omnetpp.ini
+++ b/examples/emulation/traceroute/omnetpp.ini
@@ -6,7 +6,7 @@ cmdenv-express-mode = true
 tkenv-default-run = 0
 
 **.testing = false
-**.testTimeout = 0
+**.testTimeout = 0s
 
 **.networkConfiguratorModule = ""
 
