--- a/examples/ethernet/arptest/omnetpp.ini
+++ b/examples/ethernet/arptest/omnetpp.ini
@@ -20,7 +20,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.client.tcpApp[*].tSend = 1.1s
 **.client.tcpApp[*].sendBytes = 1MiB
 **.client.tcpApp[*].sendScript = ""
-**.client.tcpApp[*].tClose = 0
+**.client.tcpApp[*].tClose = 0s
 
 #**.server.tcpApp[*].typename="TCPSinkApp"
 **.server.numTcpApps = 1
@@ -28,7 +28,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.server.tcpApp[0].localAddress = ""
 **.server.tcpApp[0].localPort = 1000
 **.server.tcpApp[0].echoFactor = 2.0
-**.server.tcpApp[0].echoDelay = 0
+**.server.tcpApp[0].echoDelay = 0s
 
 # Ethernet NIC configuration
 **.eth[*].mac.duplexMode = true
