--- a/examples/httptools/direct/flashdirect/omnetpp.ini
+++ b/examples/httptools/direct/flashdirect/omnetpp.ini
@@ -62,7 +62,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.client[*].tcpApp[0].logFile = "browser.log"
 **.client[*].tcpApp[0].scriptFile = "" # Script file disabled
 **.client[*].tcpApp[0].config = xmldoc("../../browser_cfg.xml","//user-profile[@id='normal']")
-**.client[*].tcpApp[0].activationTime = 0.0
+**.client[*].tcpApp[0].activationTime = 0.0s
 
 # Servers
 **.server*.tcpApp[0].typename = "HttpServerDirect"
@@ -71,7 +71,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.server*.tcpApp[0].logFile = "servers.log"
 **.server*.tcpApp[0].siteDefinition = ""
 **.server*.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.server*.tcpApp[0].activationTime = 0.0
+**.server*.tcpApp[0].activationTime = 0.0s
 
 **.abc.tcpApp[0].typename = "HttpServerDirect"
 **.abc.tcpApp[0].hostName = "www.abc.com"
@@ -79,4 +79,4 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.abc.tcpApp[0].logFile = "servers.log"
 **.abc.tcpApp[0].siteDefinition = ""
 **.abc.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.abc.tcpApp[0].activationTime = 0.0
+**.abc.tcpApp[0].activationTime = 0.0s
