--- a/examples/httptools/direct/pairdirect/omnetpp.ini
+++ b/examples/httptools/direct/pairdirect/omnetpp.ini
@@ -58,7 +58,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.cli.tcpApp[0].typename = "HttpBrowserDirect"
 **.cli.tcpApp[0].logFile = "" # Disable message logging
 **.cli.tcpApp[0].config = xmldoc("../../browser_cfg.xml","//user-profile[@id='normal']")
-**.cli.tcpApp[0].activationTime = 0.0
+**.cli.tcpApp[0].activationTime = 0.0s
 
 # Servers
 **.srv.numTcpApps = 1
@@ -67,7 +67,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.srv.tcpApp[0].port = 80
 **.srv.tcpApp[0].logFile = "" # Disable message logging
 **.srv.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.srv.tcpApp[0].activationTime = 0.0
+**.srv.tcpApp[0].activationTime = 0.0s
 
 [Config random]
 # Random browse events and page generation.
