--- a/examples/httptools/socket/pairsocket/omnetpp.ini
+++ b/examples/httptools/socket/pairsocket/omnetpp.ini
@@ -58,7 +58,7 @@ sim-time-limit = 100d
 **.cli.tcpApp[0].httpProtocol = 11
 **.cli.tcpApp[0].logFile = "" # Logging disabled
 **.cli.tcpApp[0].config = xmldoc("../../browser_cfg.xml","//user-profile[@id='normal']")
-**.cli.tcpApp[0].activationTime = 0.0
+**.cli.tcpApp[0].activationTime = 0.0s
 
 # Servers
 **.srv.numTcpApps = 1
@@ -69,7 +69,7 @@ sim-time-limit = 100d
 **.srv.tcpApp[0].logFile = "" # Logging disabled
 **.srv.tcpApp[0].siteDefinition = "" # Use the random page and resource generation
 **.srv.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.srv.tcpApp[0].activationTime = 0.0
+**.srv.tcpApp[0].activationTime = 0.0s
 
 # tcp settings
 **.tcp.mss = 1024
