--- a/examples/httptools/socket/simpleddos/omnetpp.ini
+++ b/examples/httptools/socket/simpleddos/omnetpp.ini
@@ -53,7 +53,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.thegood.tcpApp[0].logFile = ""
 **.thegood.tcpApp[0].siteDefinition = ""
 **.thegood.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.thegood.tcpApp[0].activationTime = 0.0
+**.thegood.tcpApp[0].activationTime = 0.0s
 
 # This server generates documents containing a number of references to images
 # stored on www.good.com. The unwitting browser will thus contribute to a DDoS attack
@@ -64,7 +64,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.thebad.tcpApp[0].logFile = ""
 **.thebad.tcpApp[0].siteDefinition = ""
 **.thebad.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.thebad.tcpApp[0].activationTime = 0.0
+**.thebad.tcpApp[0].activationTime = 0.0s
 **.thebad.tcpApp[0].minBadRequests = 3  # Very moderate attack
 **.thebad.tcpApp[0].maxBadRequests = 8
 
@@ -77,7 +77,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.theugly.tcpApp[0].logFile = ""
 **.theugly.tcpApp[0].siteDefinition = ""
 **.theugly.tcpApp[0].config = xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.theugly.tcpApp[0].activationTime = 0.0
+**.theugly.tcpApp[0].activationTime = 0.0s
 **.theugly.tcpApp[0].minBadRequests = 3  # Very moderate attack
 **.theugly.tcpApp[0].maxBadRequests = 8
 
@@ -86,7 +86,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.client[*].tcpApp[0].logFile = ""
 **.client[*].tcpApp[0].scriptFile = "browse.script" # Lets use a script to simplify the test
 **.client[*].tcpApp[0].config = xmldoc("../../browser_cfg.xml","//user-profile[@id='normal']")
-**.client[*].tcpApp[0].activationTime = 0.0
+**.client[*].tcpApp[0].activationTime = 0.0s
 
 # TCP settings
 **.tcp.mss = 1024
