--- a/examples/httptools/socket/tenserverssocket/omnetpp.ini
+++ b/examples/httptools/socket/tenserverssocket/omnetpp.ini
@@ -59,7 +59,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.server*.tcpApp[0].logFile=""
 **.server*.tcpApp[0].siteDefinition=""
 **.server*.tcpApp[0].config=xmldoc("../../server_cfg.xml","//server-profile[@id='normal']")
-**.server*.tcpApp[0].activationTime=0.0
+**.server*.tcpApp[0].activationTime = 0.0s
 
 # Clients
 **.client[*].tcpApp[0].typename="HttpBrowser"
@@ -68,7 +68,7 @@ tkenv-plugin-path = ../../../../etc/plugins
 **.client[*].tcpApp[0].logFile=""
 **.client[*].tcpApp[0].scriptFile=""  # Free running
 **.client[*].tcpApp[0].config=xmldoc("../../browser_cfg.xml","//user-profile[@id='normal']")
-**.client[*].tcpApp[0].activationTime=0.0
+**.client[*].tcpApp[0].activationTime = 0.0s
 
 #
 # TCP stuff starts here
