--- a/examples/inet/flatnet/omnetpp.ini
+++ b/examples/inet/flatnet/omnetpp.ini
@@ -12,10 +12,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.cli[*].tcpApp[0].connectAddress = "srv"
 **.cli[*].tcpApp[0].connectPort = 1000
 **.cli[*].tcpApp[0].tOpen = exponential(0.1s)
-**.cli[*].tcpApp[0].tSend = 0
+**.cli[*].tcpApp[0].tSend = 0s
 **.cli[*].tcpApp[0].sendBytes = 1MiB
 **.cli[*].tcpApp[0].sendScript = ""
-**.cli[*].tcpApp[0].tClose = 0
+**.cli[*].tcpApp[0].tClose = 0s
 
 **.srv.numTcpApps = 1
 **.srv.tcpApp[*].typename = "TCPSinkApp"
