--- a/examples/inet/shutdownrestart/omnetpp.ini
+++ b/examples/inet/shutdownrestart/omnetpp.ini
@@ -83,7 +83,7 @@ sim-time-limit = 100s
 **.srv.tcpApp[*].typename = "TCPGenericSrvApp"
 **.srv.tcpApp[0].localAddress = ""
 **.srv.tcpApp[0].localPort = 1000
-**.srv.tcpApp[0].replyDelay = 0
+**.srv.tcpApp[0].replyDelay = 0s
 
 [Config TCP]
 extends = TCP_common
