--- a/examples/ipv6/ipv6bulk/omnetpp.ini
+++ b/examples/ipv6/ipv6bulk/omnetpp.ini
@@ -67,7 +67,7 @@ sim-time-limit = 50day
 **.client*.tcpApp[0].tSend = 7s
 **.client*.tcpApp[0].sendBytes = 1000000B
 **.client*.tcpApp[0].sendScript = ""
-**.client*.tcpApp[0].tClose = 0
+**.client*.tcpApp[0].tClose = 0s
 
 #**.server.tcpApp[*].typename="TCPSinkApp"
 **.server.tcpApp[*].typename = "TCPEchoApp"
@@ -76,7 +76,7 @@ sim-time-limit = 50day
 #**.server.tcpApp[0].localAddress = "aaaa:b::8aa:ff:fe00:1"
 **.server.tcpApp[0].localPort = 1000
 **.server.tcpApp[0].echoFactor = 2.0
-**.server.tcpApp[0].echoDelay = 0
+**.server.tcpApp[0].echoDelay = 0s
 
 # NIC configuration
 **.ppp[*].queueType = "DropTailQueue" # in routers
