--- a/examples/ipv6/ipv6nclients/omnetpp.ini
+++ b/examples/ipv6/ipv6nclients/omnetpp.ini
@@ -75,7 +75,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.srv.tcpApp[*].typename = "TCPGenericSrvApp"
 **.srv.tcpApp[0].localAddress = ""
 **.srv.tcpApp[0].localPort = 1000
-**.srv.tcpApp[0].replyDelay = 0
+**.srv.tcpApp[0].replyDelay = 0s
 
 # tcp settings
 **.tcpApp[*].dataTransferMode = "object"
