--- a/examples/ipv6/nclients/omnetpp.ini
+++ b/examples/ipv6/nclients/omnetpp.ini
@@ -39,10 +39,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.srv.tcpApp[*].typename = "TCPGenericSrvApp"
 **.srv.tcpApp[0].localAddress = ""
 **.srv.tcpApp[0].localPort = 1000
-**.srv.tcpApp[0].replyDelay = 0
+**.srv.tcpApp[0].replyDelay = 0s
 #**.srv.tcpApp[1].localAddress=""  #created another one but unused for now
 #**.srv.tcpApp[1].localPort=3168
-#**.srv.tcpApp[1].replyDelay = 0
+#**.srv.tcpApp[1].replyDelay = 0s
 
 # tcp settings
 **.tcpApp[*].dataTransferMode = "object"
