--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -128,7 +128,7 @@ tkenv-plugin-path = ../../etc/plugins
 **.CN*.tcpApp.typename = "TCPGenericSrvApp"
 **.CN*.tcpApp[0].localAddress = ""
 **.CN*.tcpApp[0].localPort = 1000
-**.CN*.tcpApp[0].replyDelay = 0
+**.CN*.tcpApp[0].replyDelay = 0s
 
 #preceeded all options with .MN[*].pingApp~
 # ping app (on)
