--- a/examples/mpls/ldp/omnetpp.ini
+++ b/examples/mpls/ldp/omnetpp.ini
@@ -34,7 +34,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.host*.tcpApp[*].typename = "TCPGenericSrvApp"
 **.host*.tcpApp[0].localAddress = ""
 **.host*.tcpApp[0].localPort = 1000
-**.host*.tcpApp[0].replyDelay = 0
+**.host*.tcpApp[0].replyDelay = 0s
 
 # tcp config
 **.tcpApp[*].dataTransferMode = "object"
