--- a/examples/sctp/multihomed/omnetpp.ini
+++ b/examples/sctp/multihomed/omnetpp.ini
@@ -8,7 +8,7 @@ tkenv-plugin-path = ../../../etc/plugins
 tkenv-default-run = 0
 
 multi.testing = false
-multi.testTimeout = 0
+multi.testTimeout = 0s
 
 # udp app (off)
 **.numUdpApps = 0
