--- a/examples/visualization/transportconnection/omnetpp.ini
+++ b/examples/visualization/transportconnection/omnetpp.ini
@@ -19,10 +19,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.host[*].tcpApp[1].active = true
 **.host[*].tcpApp[1].connectAddress = "host[" + string((index + intuniform(1, 9)) % 10) + "]"
 **.host[*].tcpApp[1].connectPort = 1000
-**.host[*].tcpApp[1].tOpen = 0
-**.host[*].tcpApp[1].tSend = 0
+**.host[*].tcpApp[1].tOpen = 0s
+**.host[*].tcpApp[1].tSend = 0s
 **.host[*].tcpApp[1].sendBytes = 100MiB
-**.host[*].tcpApp[1].tClose = 0
+**.host[*].tcpApp[1].tClose = 0s
 **.host[*].tcpApp[*].localPort = -1
 **.host[*].tcpApp[*].sendScript = ""
 
