--- a/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
@@ -65,7 +65,7 @@ cmdenv-express-mode = true
 **.host2.tcpApp[0].typename = "TCPEchoApp"
 **.host2.tcpApp[0].localPort = 1000
 **.host2.tcpApp[0].echoFactor = 2.0
-**.host2.tcpApp[0].echoDelay = 0
+**.host2.tcpApp[0].echoDelay = 0s
 
 # tcp settings
 **.tcp.mss = 1024
@@ -78,7 +78,7 @@ cmdenv-express-mode = true
 
 # hook names
 **.qosBehaviorClass = "EnqueueWithoutQoS"
-**.ip.*.procDelay = 0
+**.ip.*.procDelay = 0s
 
 # ARP configuration
 **.arp.retryTimeout = 1s
