--- a/examples/wireless/aggregationtest/omnetpp.ini
+++ b/examples/wireless/aggregationtest/omnetpp.ini
@@ -37,7 +37,7 @@ network = AggregationTest
 
 # cli
 **.cli.reqLength = 1000B
-**.cli.respLength = 0
+**.cli.respLength = 0B
 **.cli.destAddress = "10:00:00:00:00:00"
 **.cli.sendInterval = 0.5ms
 
