--- a/examples/wireless/lan80211/omnetpp-ftp.ini
+++ b/examples/wireless/lan80211/omnetpp-ftp.ini
@@ -33,10 +33,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.host*.tcpApp[0].active = true
 **.host*.tcpApp[0].connectAddress = "host[0]"
 **.host*.tcpApp[0].connectPort = 1000
-**.host*.tcpApp[0].tOpen = 0
-**.host*.tcpApp[0].tSend = 0
+**.host*.tcpApp[0].tOpen = 0s
+**.host*.tcpApp[0].tSend = 0s
 **.host*.tcpApp[0].sendBytes = 100MiB
-**.host*.tcpApp[0].tClose = 0
+**.host*.tcpApp[0].tClose = 0s
 **.tcpApp[*].localAddress = ""
 **.tcpApp[*].localPort = -1
 **.tcpApp[*].sendScript = ""
