--- a/examples/wireless/lan80211/omnetpp-streaming.ini
+++ b/examples/wireless/lan80211/omnetpp-streaming.ini
@@ -34,7 +34,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.host*.udpApp[*].serverAddress = "host[0]"
 **.host*.udpApp[*].localPort = 9999
 **.host*.udpApp[*].serverPort = 3088
-**.host*.udpApp[*].startTime = 0
+**.host*.udpApp[*].startTime = 0s
 
 # ping app (off)
 **.numPingApps = 0
