--- a/examples/ethernet/arptest2/omnetpp.ini
+++ b/examples/ethernet/arptest2/omnetpp.ini
@@ -18,14 +18,14 @@ tkenv-plugin-path = ../../../etc/plugins
 **.client*.tcpApp[0].tSend = 1.1s
 **.client*.tcpApp[0].sendBytes = 1MiB
 **.client*.tcpApp[0].sendScript = ""
-**.client*.tcpApp[0].tClose = 0
+**.client*.tcpApp[0].tClose = 0s
 
 #**.server*.tcpApp[*].typename="TCPSinkApp"
 **.server*.tcpApp[*].typename = "TCPEchoApp"
 **.server*.tcpApp[0].localAddress = ""
 **.server*.tcpApp[0].localPort = 1000
 **.server*.tcpApp[0].echoFactor = 2.0
-**.server*.tcpApp[0].echoDelay = 0
+**.server*.tcpApp[0].echoDelay = 0s
 
 # Ethernet NIC configuration
 **.eth[*].queueType = "DropTailQueue" # in routers
