--- a/examples/inet/nclients/nclients2.ini
+++ b/examples/inet/nclients/nclients2.ini
@@ -40,7 +40,7 @@ sim-time-limit = 1000000s
 #  **.srv.tcpApp[0].serverThreadClass="TCPGenericSrvThread"
 **.srv.tcpApp[0].localAddress = ""
 **.srv.tcpApp[0].localPort = 80
-**.srv.tcpApp[0].replyDelay = 0
+**.srv.tcpApp[0].replyDelay = 0s
 
 # tcp settings
 **.tcpApp[*].dataTransferMode = "object"
