--- a/examples/inet/nclients/omnetpp.ini
+++ b/examples/inet/nclients/omnetpp.ini
@@ -66,7 +66,7 @@ sim-time-limit = 1000000s
 **.srv.tcpApp[*].typename = "TCPGenericSrvApp"
 **.srv.tcpApp[0].localAddress = ""
 **.srv.tcpApp[0].localPort = 1000
-**.srv.tcpApp[0].replyDelay = 0
+**.srv.tcpApp[0].replyDelay = 0s
 
 # NIC configuration
 **.ppp[*].queueType = "DropTailQueue" # in routers
