--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -84,7 +84,7 @@ tkenv-plugin-path = ../../../etc/plugins
 #**.server*.tcpApp[0].localAddress = "192.168.1.2"
 **.server*.tcpApp[0].localPort = 1000
 **.server*.tcpApp[0].echoFactor = 2.0
-**.server*.tcpApp[0].echoDelay = 0
+**.server*.tcpApp[0].echoDelay = 0s
 
 # NIC configuration
 **.ppp[*].queueType = "DropTailQueue" # in routers
