--- a/examples/sctp/nclients/omnetpp.ini
+++ b/examples/sctp/nclients/omnetpp.ini
@@ -35,7 +35,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.srv.tcpApp[*].typename = "TCPGenericSrvApp"
 **.srv.tcpApp[0].localAddress = ""
 **.srv.tcpApp[0].localPort = 1000
-**.srv.tcpApp[0].replyDelay = 0
+**.srv.tcpApp[0].replyDelay = 0s
 
 **.cli[*].numSctpApps = 1
 **.cli[*].sctpApp[*].typename = "SCTPClient"
