--- a/examples/wireless/wiredandwirelesshostswithap/omnetpp.ini
+++ b/examples/wireless/wiredandwirelesshostswithap/omnetpp.ini
@@ -22,4 +22,4 @@ tkenv-plugin-path = ../../../etc/plugins
 **.*Host*.udpApp[1..].sendInterval = 1s
 **.*Host*.udpApp[1..].stopTime = 300s
 
-**.initialZ = 0
+**.initialZ = 0m
