Examples: Replaced KLUDGE with DATA frame bitrate.
No fingerprints changed.

--- a/examples/inet/configurator/complex.ini
+++ b/examples/inet/configurator/complex.ini
@@ -26,7 +26,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # radio
 **.transmitter.power = 1mW
-**.bitrate = 54Mbps # KLUDGE: TODO: static routing based on error rate doesn't work without setting the bitrate
+**.dataFrameBitrate = 54Mbps
 
 # ping app
 **.source.numApps = 2
