examples: fixed crcmode for pcap recording

--- a/examples/ipv6/nclients/omnetpp.ini
+++ b/examples/ipv6/nclients/omnetpp.ini
@@ -73,6 +73,7 @@ description = SCTP apps via IPv6
 **.srv.app[0].localPort = 1000
 **.srv.app[0].numPacketsToReceivePerClient = 2
 
+**.crcMode = "computed"
 **.srv.numPcapRecorders=1
 **.srv.pcapRecorder[0].pcapFile="results/srv.pcap"
 
