ieee80211: support EtherType protocol discrimination in 5.9 GHz band

--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -225,3 +225,17 @@ description = "IEEE 80211 mac with scalar radio"
 extends = AbstractIeee80211Mac, AbstractIeee80211DimensionalRadio
 description = "IEEE 802.11 mac with IEEE 802.11 dimensional radio"
 
+
+[Config Ieee80211MacV2X]
+extends = Ieee80211MacWithIeee80211ScalarRadio
+description = "IEEE 802.11 radios for V2X communication in 5.9 GHz band"
+# NOTE: AIFS and TXOP settings do not comply with IEEE 802.11 OCB mode
+**.wlan*.mgmt.typename = "Ieee80211MgmtAdhoc"
+**.wlan*.agent.typename = ""
+**.wlan*.opMode = "p"
+**.wlan*.mac.qosStation = true
+**.wlan*.mac.*.rateSelection.*Bitrate = 6 Mbps
+**.wlan*.radio.bandName = "5.9 GHz"
+**.wlan*.radio.bandwidth = 10 MHz
+**.wlan*.radio.carrierFrequency = 5.9 GHz
+**.wlan*.radio.channelNumber = 4
