--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -33,6 +33,6 @@ pdf: Makefile
 html: Makefile
 	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 	@# copy the video files also to the output directory. This should be copied by the SPHINXBUILD itself, so this must be FIXED later.
-	@rsync -a --copy-links --prune-empty-dirs --exclude '_docs' --include '*/' --include '*.mp4' --include '*.m4v' --exclude '*' tutorials _build/html
-	@rsync -a --copy-links --prune-empty-dirs --exclude '_docs' --include '*/' --include '*.mp4' --include '*.m4v' --exclude '*' showcases _build/html
+	@rsync -a --copy-links --prune-empty-dirs --exclude '_docs' --include '*/' --include '*.wav' --include '*.mp3' --include '*.mp4' --include '*.m4v' --exclude '*' tutorials _build/html
+	@rsync -a --copy-links --prune-empty-dirs --exclude '_docs' --include '*/' --include '*.wav' --include '*.mp3' --include '*.mp4' --include '*.m4v' --exclude '*' showcases _build/html
 
