examples: adopt to parameter name change

--- a/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
@@ -23,7 +23,7 @@ cmdenv-express-mode = true
 **.voipServer.app[0].typename = "VoipStreamSender"
 **.voipServer.app[0].packetTimeLength = 20ms
 **.voipServer.app[0].voipHeaderSize = 4B
-**.voipServer.app[0].samplingRate = 8000Hz
+**.voipServer.app[0].sampleRate = 8000Hz
 **.voipServer.app[0].compressedBitRate = 40000bps
 **.voipServer.app[0].voipSilenceThreshold = 100
 **.voipServer.app[0].repeatCount = 2
