--- a/examples/bgpv4/BgpUpdate/omnetpp.ini
+++ b/examples/bgpv4/BgpUpdate/omnetpp.ini
@@ -36,6 +36,9 @@ tkenv-plugin-path = ../../../etc/plugins
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
 
+# Visualizer settings
+*.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
+
 
 [Config config1]
 description = "BGP, Update Msg "
