doc: updated doc generation. NED doc is nowlinked to tutorials/showcases/userguide

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -5,7 +5,7 @@ SPHINXPROJ    = INETFramework
 SOURCEDIR     = .
 BUILDDIR      = _build
 
-.PHONY: pdf html clean deploy help server
+.PHONY: pdf html clean deploy help server copy-media
 
 all: html pdf
 
@@ -17,14 +17,17 @@ help:
 
 include tools/sphinx_deployment.mk
 
-server: Makefile
+server: Makefile copy-media
 	@sphinx-autobuild --host 0.0.0.0 --port 8000 "$(SOURCEDIR)" "$(BUILDDIR)/html" $(SPHINXOPTS) $(O) -r .git
 
-pdf: Makefile
+pdf: Makefile copy-media
 	@$(SPHINXBUILD) -M latexpdf "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-html: Makefile
+html: Makefile copy-media
 	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+copy-media:
+	@mkdir -p _build/html
 	@# copy the video files also to the output directory. This should be copied by the SPHINXBUILD itself, so this must be FIXED later.
 	@rsync -a --copy-links --prune-empty-dirs --exclude '_docs' --include '*/' --include '*.wav' --include '*.mp3' --include '*.mp4' --include '*.m4v' --exclude '*' tutorials _build/html
 	@rsync -a --copy-links --prune-empty-dirs --exclude '_docs' --include '*/' --include '*.wav' --include '*.mp3' --include '*.mp4' --include '*.m4v' --exclude '*' showcases _build/html
