ci: Remove the integration branch from the CircleCI config and README.md

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,4 @@ workflows:
             branches:
               only:
                 - master
-                - integration
+#                - integration
