FIX: To activate STP, the hasStp must be set to true
Updated EtherSwitch submodules depending on STP.
Updated Rstp and Stp module test to include hasStp = true

--- a/examples/ieee8021d/omnetpp.ini
+++ b/examples/ieee8021d/omnetpp.ini
@@ -28,9 +28,11 @@ network = LargeNet
 **.host*.cli.startTime = 10ms
 
 [Config RSTP]
+**.hasStp = true
 **.spanningTreeProtocol = "Rstp"
 
 [Config STP]
+**.hasStp = true
 **.spanningTreeProtocol = "Stp"
 
 [Config Switch3RootByPriority]
