RandomWPMobility: spare extra event when waitTime is constant zero (changes fingerprint)
New example added

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -182,13 +182,18 @@ network = MoBANNetwork
 **.node[0..11].mobility.coordinatorIndex = 0
 **.node[12..23].mobility.coordinatorIndex = 1
 
-[Config RandomWaypointMobility]
+[Config RandomWaypointMobility1]
+description = "zero waitTime"
 network = MobileNetwork
 *.numHosts = 5
 **.host*.mobility.typename = "RandomWaypointMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host[0].mobility.speed = 10*uniform(20mps,50mps)
 **.host*.mobility.speed = uniform(20mps,50mps)
+
+[Config RandomWaypointMobility2]
+description = "nonzero waitTime"
+extends = RandomWaypointMobility1
 **.host*.mobility.waitTime = uniform(3s,8s)
 
 [Config RectangleMobility]
