fix for: LinearMobility: angle parameter replaced with initialMovementHeading and initialMovementElevation

--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -28,7 +28,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mobility.initFromDisplayString = true
 **.host*.mobility.typename = "LinearMobility"
 **.host*.mobility.speed = 10mps
-**.host*.mobility.angle = 0deg
+**.host*.mobility.initialMovementHeading = 0deg
 **.host*.mobility.updateInterval = 100ms
 
 # wireless channels
