MassMobility: rename changeAngleBy parameter to angleDelta

--- a/doc/src/users-guide/lib/Snippets.ini
+++ b/doc/src/users-guide/lib/Snippets.ini
@@ -35,7 +35,7 @@ network = MobileAdhocNetworkExample
 *.host[*].mobility.typename = "MassMobility" # stochastic mobility model
 *.host[*].mobility.initFromDisplayString = false # ignore display string
 *.host[*].mobility.changeInterval = truncnormal(2s, 0.5s) # between turns
-*.host[*].mobility.changeAngleBy = normal(0deg, 30deg) # random turn
+*.host[*].mobility.angleDelta = normal(0deg, 30deg) # random turn
 *.host[*].mobility.speed = truncnormal(20mps, 8mps) # random speed
 *.host[*].numApps = 1 # number of applications on hosts
 *.host[*].app[0].typename = "PingApp" # application type for all hosts
