--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -110,7 +110,7 @@ network = MobileNetwork
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(15mps, 5mps)
 
 [Config MassMobilityWithScenario]
@@ -119,7 +119,7 @@ network = MobileNetworkWithScenario
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(15mps, 5mps)
 **.scenarioManager.script = xmldoc("scenario.xml")
 
@@ -336,7 +336,7 @@ description = "superpositioning"
 **.host[*].mobility.element[2].constraintAreaMaxX = 50m # limiting the random movement
 **.host[*].mobility.element[2].constraintAreaMaxY = 50m # limiting the random movement
 **.host[*].mobility.element[2].changeInterval = truncnormal(2s, 1s)
-**.host[*].mobility.element[2].changeAngleBy = normal(0deg, 30deg)
+**.host[*].mobility.element[2].angleDelta = normal(0deg, 30deg)
 **.host[*].mobility.element[2].speed = truncnormal(10mps, 3mps)
 
 # other hosts are facing towards the last host sitting in the center
