--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -19,7 +19,7 @@ cmdenv-express-mode = true
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
 **.host*.mobility.updateInterval = 100ms
 **.host*.ac_wlan.interfaces = "wlan0"
