--- a/examples/adhoc/idealwireless/omnetpp.ini
+++ b/examples/adhoc/idealwireless/omnetpp.ini
@@ -17,7 +17,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
 **.host*.mobility.updateInterval = 100ms
 
