--- a/examples/aodv/omnetpp.ini
+++ b/examples/aodv/omnetpp.ini
@@ -57,7 +57,7 @@ extends = Static
 **.host[1].mobility.typename = "StationaryMobility"
 
 **.host[*].mobility.changeInterval = normal(5s, 0.1s)
-**.host[*].mobility.changeAngleBy = normal(0deg, 30deg)
+**.host[*].mobility.angleDelta = normal(0deg, 30deg)
 **.host[*].mobility.speed = normal(2mps, 0.01mps)
 **.host[1].mobility.initialX = 600m
 **.host[1].mobility.initialY = 600m
