--- a/examples/geometry/omnetpp.ini
+++ b/examples/geometry/omnetpp.ini
@@ -24,7 +24,7 @@ seed-set = 3
 **.host*.mobility.initFromDisplayString = false
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
 **.host*.mobility.updateInterval = 100ms
 
