--- a/examples/objectcache/omnetpp.ini
+++ b/examples/objectcache/omnetpp.ini
@@ -34,7 +34,7 @@ num-rngs = 3
 # mobility
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
 **.host*.mobility.updateInterval = 100ms
 
