--- a/examples/wireless/lan80211/omnetpp-ftp.ini
+++ b/examples/wireless/lan80211/omnetpp-ftp.ini
@@ -19,7 +19,7 @@ tkenv-plugin-path = ../../../etc/plugins
 # mobility
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
-**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
 **.host*.mobility.updateInterval = 100ms
 
