--- a/examples/wireless/obstacle/omnetpp.ini
+++ b/examples/wireless/obstacle/omnetpp.ini
@@ -47,9 +47,9 @@ description = "Wireless nodes send pings while moving around the streets"
 # visualizer
 *.visualizer.*Visualizer.sceneVisualizer.axisLength = 500m
 *.visualizer.canvasVisualizer.sceneVisualizer.viewTranslation = "25000 0"
-*.visualizer.osgVisualizer.sceneVisualizer.displayPlayground = true
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundImage = "background/checkered.png"
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundImageSize = 80m
+*.visualizer.osgVisualizer.sceneVisualizer.displayScene = true
+*.visualizer.osgVisualizer.sceneVisualizer.sceneImage = "background/checkered.png"
+*.visualizer.osgVisualizer.sceneVisualizer.sceneImageSize = 80m
 *.visualizer.*Visualizer.mediumVisualizer.signalPropagationAnimationSpeed = 0.000001
 *.visualizer.*Visualizer.mediumVisualizer.signalTransmissionAnimationSpeed = 0.0005
 *.physicalEnvironment.config = xmldoc("outdoor.xml")
@@ -87,9 +87,9 @@ description = "Wireless nodes send pings inside a house"
 
 # visualizer
 *.visualizer.*Visualizer.sceneVisualizer.axisLength = 50m
-*.visualizer.osgVisualizer.sceneVisualizer.displayPlayground = true
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundImage = "background/checkered.png"
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundImageSize = 8m
+*.visualizer.osgVisualizer.sceneVisualizer.displayScene = true
+*.visualizer.osgVisualizer.sceneVisualizer.sceneImage = "background/checkered.png"
+*.visualizer.osgVisualizer.sceneVisualizer.sceneImageSize = 8m
 *.visualizer.canvasVisualizer.sceneVisualizer.viewTranslation = "5000 5000"
 *.visualizer.*Visualizer.mediumVisualizer.signalPropagationAnimationSpeed = 0.000001
 *.visualizer.*Visualizer.mediumVisualizer.signalTransmissionAnimationSpeed = 0.0005
@@ -128,7 +128,7 @@ description = "Wireless nodes send pings while orbiting around a sphere"
 # visualizer
 *.visualizer.*Visualizer.sceneVisualizer.axisLength = 1000m
 *.visualizer.canvasVisualizer.sceneVisualizer.viewTranslation = "25000 0"
-*.visualizer.osgVisualizer.sceneVisualizer.displayPlayground = false
+*.visualizer.osgVisualizer.sceneVisualizer.displayScene = false
 *.visualizer.*Visualizer.mediumVisualizer.signalPropagationAnimationSpeed = 0.000001
 *.visualizer.*Visualizer.mediumVisualizer.signalTransmissionAnimationSpeed = 0.0005
 
