playground -> scene renaming: comments

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -299,13 +299,13 @@ description = "superpositioning"
 *.visualizer.mobilityVisualizer.displayOrientations = true
 *.visualizer.mobilityVisualizer.displayVelocities = true
 
-# last host stays in the center of the playground
+# last host stays in the center of the scene
 **.host[7].mobility.typename = "StationaryMobility"
 **.host[7].mobility.initialX = 300m
 **.host[7].mobility.initialY = 200m
 **.host[7].mobility.initialZ = 0m
 
-# other hosts move around the playground using mobility superpositon
+# other hosts move around the scene using mobility superpositon
 **.host[*].mobility.typename = "SuperpositioningMobility"
 **.host[*].mobility.numElements = 4
 
