bgp: updating the BgpUpdate example after recent changes

--- a/examples/bgpv4/BgpUpdate/omnetpp.ini
+++ b/examples/bgpv4/BgpUpdate/omnetpp.ini
@@ -35,6 +35,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+**.redistributeOspf = true
 
 
 [Config config1]
