Examples: Followed recent changes.

--- a/examples/ethernet/vlan/omnetpp.ini
+++ b/examples/ethernet/vlan/omnetpp.ini
@@ -5,6 +5,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.fcsMode = "computed"
 **.crcMode = "computed"
 
+*.*.eth[*].vlan.typename = "Ieee8021QVlan"
+
 *.host1.numApps = 1
 *.host1.app[*].typename = "TcpSessionApp"
 *.host1.app[*].connectAddress = "host2"
