Examples: Added a new config which uses VLAN network interfaces.

--- a/examples/ethernet/vlan/omnetpp.ini
+++ b/examples/ethernet/vlan/omnetpp.ini
@@ -5,6 +5,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.fcsMode = "computed"
 **.crcMode = "computed"
 
+*.*.ipv4.arp.typename = "GlobalArp"
 *.*.eth[*].vlan.typename = "Ieee8021QVlan"
 
 *.host1.numApps = 1
@@ -32,28 +33,35 @@ description = "VLANs are not used by default"
 
 [Config BetweenSwitches]
 description = "VLAN 42 between switch1 and switch2"
+
 *.switch*.eth[0].vlan.inboundVlanIdFilter = "-1"
 *.switch*.eth[0].vlan.inboundVlanIdMap = "-1 42"
 *.switch*.eth[0].vlan.outboundVlanIdFilter = "42"
 *.switch*.eth[0].vlan.outboundVlanIdMap = "42 -1"
+
 *.switch*.eth[1].vlan.inboundVlanIdFilter = "42"
 *.switch*.eth[1].vlan.outboundVlanIdFilter = "42"
 
 [Config BetweenHosts]
 description = "VLAN 42 between host1 and host2 through switch1 and switch2"
+
 *.host*.eth[0].vlan.inboundVlanIdMap = "42 -1"
 *.host*.eth[0].vlan.outboundVlanIdMap = "-1 42"
+
 *.switch*.eth[*].vlan.inboundVlanIdFilter = "42"
 *.switch*.eth[*].vlan.outboundVlanIdFilter = "42"
 
 [Config Asymmetric]
 description = "VLAN 42 between host1 and switch2 and VLAN 81 between host2 and switch1"
+
 *.host1.eth[0].vlan.outboundVlanIdMap = "-1 42"
 *.host2.eth[0].vlan.outboundVlanIdMap = "-1 81"
+
 *.switch1.eth[0].vlan.inboundVlanIdFilter = "42"
 *.switch1.eth[1].vlan.inboundVlanIdFilter = "81"
 *.switch1.eth[1].vlan.inboundVlanIdMap = "81 -1"
 *.switch1.eth[1].vlan.outboundVlanIdFilter = "42"
+
 *.switch2.eth[0].vlan.inboundVlanIdFilter = "81"
 *.switch2.eth[1].vlan.outboundVlanIdFilter = "81"
 *.switch2.eth[1].vlan.inboundVlanIdFilter = "42"
@@ -61,11 +69,31 @@ description = "VLAN 42 between host1 and switch2 and VLAN 81 between host2 and s
 
 [Config DoubleTagged]
 description = "customer VLAN 42 between host1 and host2, and service VLAN 81 between switch1 and switch2"
+
 *.*.eth[0].vlan.vlanTagType = "c"
+
 *.host*.eth[0].vlan.inboundVlanIdMap = "42 -1"
 *.host*.eth[0].vlan.outboundVlanIdMap = "-1 42"
+
 *.switch*.eth[0].vlan.inboundVlanIdFilter = "42"
 *.switch*.eth[0].vlan.outboundVlanIdFilter = "42"
+
 *.switch*.eth[1].vlan.inboundVlanIdMap = "81 -1"
 *.switch*.eth[1].vlan.outboundVlanIdMap = "-1 81"
 *.switch*.eth[1].vlan.inboundVlanIdFilter = "81"
+
+[Config Application]
+description = "VLAN 42 between host1 and host2 using VLAN interfaces"
+
+*.configurator.optimizeRoutes = false # TODO: workaround for ASSERT
+*.configurator.config = xml("<config><interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/><route hosts='host1' destination='host2%vlan0' netmask='255.255.255.255' interface='vlan0'/><route hosts='host2' destination='host1%vlan0' netmask='255.255.255.255' interface='vlan0'/></config>")
+
+*.host*.eth[0].mac.promiscuous = true # TODO: otherwise the ethernet interface drops the packets
+*.host1.app[*].connectAddress = "host2%vlan0"
+
+*.host*.numVlanInterfaces = 1
+*.host*.vlan[0].vlan.vlanId = 42
+*.host*.vlan[0].vlan.interfaceName = "eth0"
+
+*.switch*.eth[*].vlan.inboundVlanIdFilter = "42"
+*.switch*.eth[*].vlan.outboundVlanIdFilter = "42"
