Examples: Followed recent changes.

--- a/examples/ethernet/vlan/omnetpp.ini
+++ b/examples/ethernet/vlan/omnetpp.ini
@@ -5,7 +5,6 @@ tkenv-plugin-path = ../../../etc/plugins
 **.fcsMode = "computed"
 **.crcMode = "computed"
 
-*.*.ipv4.arp.typename = "GlobalArp"
 *.*.eth[*].vlan.typename = "Ieee8021QVlan"
 
 *.host1.numApps = 1
@@ -82,18 +81,16 @@ description = "customer VLAN 42 between host1 and host2, and service VLAN 81 bet
 *.switch*.eth[1].vlan.outboundVlanIdMap = "-1 81"
 *.switch*.eth[1].vlan.inboundVlanIdFilter = "81"
 
-[Config Application]
+[Config VirtualInterface]
 description = "VLAN 42 between host1 and host2 using VLAN interfaces"
 
-*.configurator.optimizeRoutes = false # TODO: workaround for ASSERT
 *.configurator.config = xml("<config><interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/><route hosts='host1' destination='host2%vlan0' netmask='255.255.255.255' interface='vlan0'/><route hosts='host2' destination='host1%vlan0' netmask='255.255.255.255' interface='vlan0'/></config>")
 
-*.host*.eth[0].mac.promiscuous = true # TODO: otherwise the ethernet interface drops the packets
 *.host1.app[*].connectAddress = "host2%vlan0"
 
 *.host*.numVlanInterfaces = 1
 *.host*.vlan[0].vlan.vlanId = 42
-*.host*.vlan[0].vlan.interfaceName = "eth0"
+*.host*.vlan[0].vlan.realInterfaceName = "eth0"
 
 *.switch*.eth[*].vlan.inboundVlanIdFilter = "42"
 *.switch*.eth[*].vlan.outboundVlanIdFilter = "42"
