Examples: Followed recent changes.

--- a/examples/ethernet/vlan/omnetpp.ini
+++ b/examples/ethernet/vlan/omnetpp.ini
@@ -44,7 +44,9 @@ description = "VLAN 42 between switch1 and switch2"
 [Config BetweenHosts]
 description = "VLAN 42 between host1 and host2 through switch1 and switch2"
 
+*.host*.eth[0].vlan.inboundVlanIdFilter = "42"
 *.host*.eth[0].vlan.inboundVlanIdMap = "42 -1"
+*.host*.eth[0].vlan.outboundVlanIdFilter = "-1"
 *.host*.eth[0].vlan.outboundVlanIdMap = "-1 42"
 
 *.switch*.eth[*].vlan.inboundVlanIdFilter = "42"
@@ -69,7 +71,7 @@ description = "VLAN 42 between host1 and switch2 and VLAN 81 between host2 and s
 [Config DoubleTagged]
 description = "customer VLAN 42 between host1 and host2, and service VLAN 81 between switch1 and switch2"
 
-*.*.eth[0].vlan.vlanTagType = "c"
+*.*.eth[1].vlan.vlanTagType = "s"
 
 *.host*.eth[0].vlan.inboundVlanIdMap = "42 -1"
 *.host*.eth[0].vlan.outboundVlanIdMap = "-1 42"
@@ -84,6 +86,7 @@ description = "customer VLAN 42 between host1 and host2, and service VLAN 81 bet
 [Config VirtualInterface]
 description = "VLAN 42 between host1 and host2 using VLAN interfaces"
 
+# TODO: vlan interfaces should be autoconfigured
 *.configurator.config = xml("<config><interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/><route hosts='host1' destination='host2%vlan0' netmask='255.255.255.255' interface='vlan0'/><route hosts='host2' destination='host1%vlan0' netmask='255.255.255.255' interface='vlan0'/></config>")
 
 *.host1.app[*].connectAddress = "host2%vlan0"
