examples: shutdownrestart: added cases: application stop/start

--- a/examples/inet/shutdownrestart/omnetpp.ini
+++ b/examples/inet/shutdownrestart/omnetpp.ini
@@ -9,6 +9,8 @@ sim-time-limit = 100s
 
 **.hasStatus = true
 
+*.scenarioManager.script = xmldoc(${scenario = "scenario_node.xml", "scenario_app.xml"})
+
 [Config Ping]
 # clients ping te host
 **.cli[*].numApps = 1
