--- a/examples/manetrouting/inetmanet/omnetpp.ini
+++ b/examples/manetrouting/inetmanet/omnetpp.ini
@@ -45,10 +45,15 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].radio.transmitter.power = 2mW
 
 [Config OLSR]
-*.host[*].app[0].typename = "OLSR"
+*.host[*].app[0].typename = "Olsr"
 *.host[*].app[*].typename = "PingApp"
 
 [Config Batman]
 *.host[*].app[0].typename = "Batman"
 *.host[*].app[*].typename = "PingApp"
+
+[Config AodvUU]
+*.host[*].app[0].typename = "AodvUU"
+*.host[*].app[*].typename = "PingApp"
+
 
