--- a/examples/manetrouting/net80211_aodv/omnetpp.ini
+++ b/examples/manetrouting/net80211_aodv/omnetpp.ini
@@ -23,7 +23,7 @@ description = "Manet routing Simple test"
 **.arp.typename = "GlobalArp"
 
 **.numApps = 2
-**.host[0].app[1].typename = "UDPBasicBurst"
+**.host[0].app[1].typename = "UdpBasicBurst"
 **.host[0].app[1].destAddresses = "fixhost[0]"
 **.app[1].startTime = 10s+uniform(1s,5s)
 
