--- a/examples/manetrouting/net80211_aodv/omnetpp.ini
+++ b/examples/manetrouting/net80211_aodv/omnetpp.ini
@@ -23,8 +23,9 @@ description = "Manet routing Simple test"
 **.arp.typename = "GlobalArp"
 
 **.numApps = 2
-**.host[0].app[1].typename = "UdpBasicBurst"
+**.host[*].app[1].typename = "UdpBasicBurst"
 **.host[0].app[1].destAddresses = "fixhost[0]"
+**.host[*].app[1].destAddresses = ""
 **.app[1].startTime = 10s+uniform(1s,5s)
 
 # mobility
