wireless: renamed 'default_ssid' to 'defaultSsid'

--- a/doc/src/users-guide/lib/Snippets.ini
+++ b/doc/src/users-guide/lib/Snippets.ini
@@ -59,8 +59,8 @@ network = WirelessNetworkExample
 network = WirelessNetworkExample
 #!MultipleWirelessInterfacesExample
 *.host[*].numWlanInterfaces = 2 # number of wireless network interfaces
-*.host[*].wlan[0].agent.default_ssid = "alpha" # connects to alpha network
-*.host[*].wlan[1].agent.default_ssid = "bravo" # connects to bravo network
+*.host[*].wlan[0].agent.defaultSsid = "alpha" # connects to alpha network
+*.host[*].wlan[1].agent.defaultSsid = "bravo" # connects to bravo network
 #!End
 
 [Config ForwardingExample]
