--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -40,7 +40,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan*.bitrate = 2Mbps
 
 **.wlan[*].agent.activeScan = true
-**.wlan[*].agent.default_ssid = ""
+**.wlan[*].agent.defaultSsid = ""
 **.wlan[*].agent.channelsToScan = ""  # "" means all
 **.wlan[*].agent.probeDelay = 0.1s
 **.wlan[*].agent.minChannelTime = 0.15s
