ospf: code refactoring to use c++11

--- a/examples/bgpv4/BgpUpdate/omnetpp.ini
+++ b/examples/bgpv4/BgpUpdate/omnetpp.ini
@@ -37,6 +37,9 @@ tkenv-plugin-path = ../../../etc/plugins
 **.bgpConfig = xmldoc("BGPConfig.xml")
 **.redistributeOspf = true
 
+# Visualizer settings
+*.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
+
 
 [Config config1]
 description = "BGP, Update Msg "
