updating bgp examples after the recent changes

--- a/examples/bgpv4/BgpAndOspfSimple/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspfSimple/omnetpp.ini
@@ -34,8 +34,16 @@ tkenv-plugin-path = ../../../etc/plugins
 # OSPF configuration
 **.ospfConfig = xmldoc("OSPFConfig.xml")
 
+*.A.bgp.redistributeOspf = "E2"
+*.B.bgp.redistributeOspf = "E2"
+
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+
+# Visualizer settings
+*.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
+
+####################################################################
 
 [Config config1]
 # Multi OPSF routing test + BGP
@@ -51,9 +59,11 @@ network = BGPNet
 **.HA11.app[0].localPort = 1234
 **.HA11.app[0].destPort = 5678
 **.HA11.app[0].messageLength = 32 bytes
+**.HA11.app[0].startTime = 30s
 **.HA11.app[0].sendInterval = 1s
 **.HA11.app[0].destAddresses = "192.170.1.1"
 
 **.HB11.numApps = 1
 **.HB11.app[*].typename = "UdpSink"
 **.HB11.app[0].localPort = 5678
+
