Examples: Added displayInterfaceTables to BGP examples.

--- a/examples/bgpv4/BgpAndOspf/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspf/omnetpp.ini
@@ -36,6 +36,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+# Visualizer settings
+*.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
 
 [Config config1]
 # Multi OPSF routing test + BGP
