--- a/examples/bgpv4/BgpOpen/omnetpp.ini
+++ b/examples/bgpv4/BgpOpen/omnetpp.ini
@@ -31,6 +31,9 @@ tkenv-plugin-path = ../../../etc/plugins
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
 
+# Visualizer settings
+*.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
+
 [Config config1]
 # BGPOpenA_B test
 description = "BGP, Msg Open A vers B "
