Examples: Added redistributeOspf parameter settings to BGP examples.

--- a/examples/bgpv4/Bgp3Routers/omnetpp.ini
+++ b/examples/bgpv4/Bgp3Routers/omnetpp.ini
@@ -35,6 +35,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+**.bgp.redistributeOspf = "O IA"
+
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
 
