--- a/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
+++ b/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
@@ -34,6 +34,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+**.bgp.redistributeOspf = "O IA"
+
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
 
