--- a/examples/bgpv4/BgpAndOspf/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspf/omnetpp.ini
@@ -36,6 +36,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+*.*.bgp.redistributeOspf = "E2"
+
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
 
