--- a/examples/bgpv4/BgpCompleteTest/omnetpp.ini
+++ b/examples/bgpv4/BgpCompleteTest/omnetpp.ini
@@ -35,6 +35,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
+**.redistributeOspf = "O IA"
+
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
 
