--- a/examples/bgpv4/BgpUpdate/omnetpp.ini
+++ b/examples/bgpv4/BgpUpdate/omnetpp.ini
@@ -35,11 +35,10 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
-**.redistributeOspf = true
+**.redistributeOspf = "O IA"
 
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
-
 
 [Config config1]
 description = "BGP, Update Msg "
