Examples: Renamed networks to have a uniform name for all BGP examples.

--- a/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
+++ b/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 description = "2 BGP routers in one AS"
-network = BGPTest
+network = BgpNetwork
 sim-time-limit = 60s
 #debug-on-errors = true
 output-scalar-file = results.sca
