--- a/examples/bgpv4/BgpAndOspfSimple/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspfSimple/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 description = "Multi OPSF routing test + BGP"
-network = BGPNet
+network = BgpNetwork
 sim-time-limit = 40s
 #debug-on-errors = true
 output-scalar-file = results.sca
