--- a/examples/bgpv4/BgpCompleteTest/omnetpp.ini
+++ b/examples/bgpv4/BgpCompleteTest/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 description = "BGP complete test"
-network = BGPTest
+network = BgpNetwork
 sim-time-limit = 200s
 #debug-on-errors = true
 output-scalar-file = results.sca
