--- a/examples/bgpv4/BgpOpen/omnetpp.ini
+++ b/examples/bgpv4/BgpOpen/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 description = "BGP, Msg Open A vers B "
-network = Net
+network = BgpNetwork
 sim-time-limit = 62s
 #debug-on-errors = true
 output-scalar-file = results.sca
