--- a/examples/bgpv4/BgpUpdate/omnetpp.ini
+++ b/examples/bgpv4/BgpUpdate/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 description = "BGP, Update Msg "
-network = BGPTest
+network = BgpNetwork
 sim-time-limit = 30s
 #debug-on-errors = true
 output-scalar-file = results.sca
