--- a/examples/bgpv4/BgpAndOspf/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspf/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 description = "Multi OPSF + BGP"
-network = BGPTest
+network = BgpNetwork
 sim-time-limit = 60s
 #debug-on-errors = true
 output-scalar-file = results.sca
