Examples: Fixed BGP examples, all applications work as expected.

--- a/examples/bgpv4/Bgp3Routers/omnetpp.ini
+++ b/examples/bgpv4/Bgp3Routers/omnetpp.ini
@@ -37,7 +37,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
-**.bgp.redistributeOspf = "O IA"
+**.bgp.redistributeOspf = "O IA E2"
 
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
