--- a/examples/bgpv4/BgpCompleteTest/omnetpp.ini
+++ b/examples/bgpv4/BgpCompleteTest/omnetpp.ini
@@ -37,7 +37,9 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
-**.redistributeOspf = "O IA"
+*.*.bgp.redistributeOspf = "O IA E2"
+*.C*.bgp.nextHopSelf = true
+*.C*.bgp.redistributeInternal = true
 
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
