--- a/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
+++ b/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
@@ -34,9 +34,22 @@ tkenv-plugin-path = ../../../etc/plugins
 # OSPF configuration
 **.ospfConfig = xmldoc("OSPFConfig.xml")
 
+*.A1.ipv4.routingTable.routerId = "10.10.1.254"
+*.A2.ipv4.routingTable.routerId = "10.10.3.254"
+
 # bgp settings
 **.bgpConfig = xmldoc("BGPConfig.xml")
-**.bgp.redistributeOspf = "O IA"
+
+*.B.bgp.redistributeOspf = "O IA E2"
+*.C.bgp.redistributeOspf = "O IA E2"
+*.A1.bgp.redistributeOspf = "O IA E2"
+*.A2.bgp.redistributeOspf = "O IA E2"
+
+*.A1.bgp.nextHopSelf = true
+*.A2.bgp.nextHopSelf = true
+
+*.A1.bgp.redistributeInternal = true
+*.A2.bgp.redistributeInternal = true
 
 # Visualizer settings
 *.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
